@@ -7,21 +7,27 @@ class vxResourceHistoryWidget extends modDashboardWidgetInterface {
     public function render() {
         $corePath = $this->modx->getOption('versionx.core_path',null,$this->modx->getOption('core_path').'components/versionx/');
         require_once $corePath.'model/versionx.class.php';
-        $this->modx->versionx = new VersionX($this->modx);
-        $this->modx->versionx->initialize('mgr');
+        $versionx = new VersionX($this->modx);
 
-        $langs = $this->modx->versionx->_getLangs();
+        $langs = $versionx->_getLangs();
         
-        $vxUrl = $this->modx->versionx->config['assets_url'];
+        $vxUrl = $versionx->config['assets_url'];
+        $this->modx->regClientHTMLBlock('');
+
         $this->modx->regClientStartupHTMLBlock('
+            <script type="text/javascript" src="'.$vxUrl.'js/mgr/versionx.class.js" ></script>
             <script type="text/javascript" src="'.$vxUrl.'js/mgr/resources/widget.js" ></script>
-            <script type="text/javascript">Ext.onReady(function() {
-            '.$langs.'
-            MODx.load({
-                xtype: "versionx-grid-resources-widget"
-                ,renderTo: "versionx-widget-resource-div"
+            <script type="text/javascript">
+            Ext.onReady(function() {
+                '.$langs.'
+                VersionX.config = '.$this->modx->toJSON($versionx->config).';
+                MODx.load({
+                    xtype: "versionx-grid-resources-widget"
+                    ,renderTo: "versionx-widget-resource-div"
+                });
             });
-        });</script>');
+            </script>
+        ');
 
         return '<div id="versionx-widget-resource-div"></div>';
     }
