@@ -1,5 +1,7 @@
 This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.
 
+- Fix the dashboard widget causing an E_FATAL and not using the right links
+
 ++++++++++++++++++++++++++++++++
 ++   VersionX 2.2.0-pl        ++
 ++   Released on 2018-12-14   ++
